[project]
name = "esthetician-software"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.119.0",
    "google-api-python-client>=2.184.0",
    "google-auth>=2.41.1",
    "pydantic>=2.12.2",
    "pyjwt>=2.10.1",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
]
