[project]
name = "esthetician-software"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "pydantic>=2.12.2",
    "pyjwt>=2.10.1",
    "motor>=3.3.2",
    "hypercorn>=0.16.0",
    "fastapi>=0.119.1",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
]
