[project]
name = "esthetician-software"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "pydantic>=2.12.2",
    "pyjwt>=2.10.1",
    "hypercorn>=0.16.0",
    "fastapi>=0.119.1",
    "python-dotenv>=1.1.1",
    "motor>=3.7.1",
    "pymongo[srv]>=4.15.3",
]
